--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,7 @@ p {
   max-width: 800px;
   margin-left: auto;
   margin-right: auto;
+  padding: 24px;
 }
 
 header {
@@ -60,13 +61,21 @@ footer {
   border: 1px solid #c9c9c9;
   border-radius: 7px;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.15);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.card > img:first-child {
+.card-img {
   border-radius: 7px 7px 0 0;
   margin-bottom: 20px;
-  max-width: 100%;
-  height: auto;
+  max-width: 220px;
+  max-height: 200px;
+  overflow: hidden;
+}
+
+.card-img img {
+  max-width: -webkit-fill-available;
 }
 
 .card h3,
@@ -137,6 +146,7 @@ footer {
   margin: 4px 0;
   display: flex;
   justify-content: space-around;
+  align-items: center;
   border: #f76c6c 1px solid;
   border-radius: 4px;
   padding: 2px;
@@ -174,12 +184,14 @@ input {
 }
 
 .modifySkill {
-  border: 1px solid black;
   border-radius: 5px;
-  padding: 1rem;
   margin-bottom: 1rem;
   height: 100px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+}
+
+.test {
+  background: black;
 }
